--- a/README
+++ b/README
@@ -1,3 +1,8 @@
 Steg2crack
 ----------
 
+Steg2crack adalah program Python sederhana yang dirancang untuk meng-crack file stego menggunakan teknik Dictionary Attack.
+
+[Masih dalam tahap pengembangan]
+
+- fixploit03 -
