--- a/README
+++ b/README
@@ -3,6 +3,8 @@ Steg2crack
 
 Steg2crack adalah program Python sederhana yang dirancang untuk meng-crack file stego menggunakan teknik Dictionary Attack.
 
-[Masih dalam tahap pengembangan]
+Kloning
+-------
+https://github.com/fixploit03/Steg2crack.git
 
 - fixploit03 -
