--- a/README
+++ b/README
@@ -7,4 +7,8 @@ Kloning
 -------
 https://github.com/fixploit03/Steg2crack.git
 
+Unduh
+-----
+https://github.com/fixploit03/Steg2crack/archive/refs/heads/main.zip
+
 - fixploit03 -
